avoid cropping on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -25,9 +25,6 @@ CSS Queries
     .footer-leftcol p, .footer-rightcol p { text-align: center; }
     .footer-midcol ul { margin-top: 40px; }
     .submit-btn { margin-top: 10px; }
-    .small-featured-sketch {
-        height: 300px;
-    }
     .column {
         width: 100%;
     }
